# pytest_solveme

./: .gitignore  README.md  examples.py  pyproject.toml  pytest.ini
src/baseclasses/: responce.py  response.py
src/enums/: global_enums.py  user_enums.py
src/generators/: player.py  player_localization.py
src/pydantic_schemas/: post.py
src/schemas/: post.py  user.py
tests/: conftest.py  test_foo.py
