[tool.poetry]
name = "pytest-solveme"
version = "0.1.0"
description = ""
authors = ["kirill0720 <knete-87@mail.ru>"]
readme = "README.md"
packages = [{include = "pytest_solveme"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.28.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
